Added group functiionality and photos handling
